@@ -52,7 +52,7 @@ public class CuttingBoardRecipe implements Recipe<SingleRecipeInput>
 
 	@Override
 	public ItemStack assemble(SingleRecipeInput inv, HolderLookup.Provider provider) {
-		return this.results.getFirst().stack().copy();
+		return this.results.get(0).stack().copy();
 	}
 
 	@Override
@@ -78,7 +78,7 @@ public class CuttingBoardRecipe implements Recipe<SingleRecipeInput>
 
 	@Override
 	public ItemStack getResultItem(HolderLookup.Provider provider) {
-		return this.results.getFirst().stack();
+		return this.results.get(0).stack();
 	}
 
 	public List<ItemStack> getResults() {
@@ -153,7 +153,7 @@ public class CuttingBoardRecipe implements Recipe<SingleRecipeInput>
 	{
 		private static final MapCodec<CuttingBoardRecipe> CODEC = RecordCodecBuilder.mapCodec(inst -> inst.group(
 				Codec.STRING.optionalFieldOf("group", "").forGetter(CuttingBoardRecipe::getGroup),
-				Ingredient.LIST_CODEC_NONEMPTY.fieldOf("ingredients").flatXmap(ingredients -> {
+				Ingredient.CODEC_NONEMPTY.listOf().fieldOf("ingredients").flatXmap(ingredients -> {
 					if (ingredients.isEmpty()) {
 						return DataResult.error(() -> "No ingredients for cutting recipe");
 					}
